--- a/2023.09.04/teszt.html
+++ b/2023.09.04/teszt.html
@@ -14,14 +14,21 @@
                 <th>Hétfő</th>
                 <th>Kedd</th>
                 <th>Szerda</th>
+                <th>Csütörtök</th>
+                <th>Péntek</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td>1.</td><td rowspan="3">frontend</td></tr>
-            <tr><td>2.</td></tr>
-            <tr><td>3.</td></tr>
-            <tr><td>4.</td><td rowspan="2">backtend</td></tr>
-            <tr><td>5.</td></tr>
+            <tr><td>1.</td><td rowspan="4">Aszt.mobil.alk.fejl.tesz.</td><td rowspan="4">frontend</td><td rowspan="2">frontend</td><td rowspan="7">IKT proj. II.</td><td>Konz.fog</td></tr>
+            <tr><td>2.</td><td rowspan="2">Szakmai angol</td></tr>
+            <tr><td>3.</td><td rowspan="3">Adatb. II.</td></tr>
+            <tr><td>4.</td><td rowspan="2">Munka.id.nyelv</td></tr>
+            <tr><td>5.</td><td rowspan="5">Aszt.mobil.alk.fejl.tesz.</td><td rowspan="5">backend</td></tr>
+            <tr><td>6.</td></tr>
+            <tr><td>7.</td></tr>
+            <tr><td>8.</td></tr>
+            <tr><td>9.</td></tr>
+            
         </tbody>
     </table>
 </body>
