--- a/2023.09.05/1_Lazar_Ervin megoldás/lazarervin.html
+++ b/2023.09.05/1_Lazar_Ervin megoldás/lazarervin.html
@@ -12,7 +12,7 @@
         <h1><img src="dia.png" alt="dia" class="kep">Digitális Irodalmi Akadémia tagja</h1>
         <div id="oszlop1">
             <img src="le_kep.jpg" alt="le_kep" class="kep">
-            <p>Életrajz</p>
+            <p><a href="eletrajz.html" target="_self">Életrajz</a></p>
             <p>Bibliográfia</p>
             <p>Szakirodalom</p>
             <p>Digitalizált művek</p>
