--- a/2023.09.05/1_Lazar_Ervin megoldás/lazarervin.html
+++ b/2023.09.05/1_Lazar_Ervin megoldás/lazarervin.html
@@ -20,12 +20,27 @@
             <p>Fotók</p>
             <p>Borítók</p>
             <p>Kéziratok</p>
-            <p>Fontosabb díjak</p>
+            <p><a href="eletrajz.html#dij" target="_self">Fontosabb díjak</a></p>
             <p>Ajánlott honlapok</p>
         </div>
-        <div id="oszlop2"></div>
+        <div id="oszlop2">
+            <h2>Életrajz</h2>
+            <p>1936. május 5-én született Budapesten. Édesapja Lázár István uradalmi intéző, édesanyja Pentz Etelka. A Tolna megyei Alsó-Rácegrespusztán – ahol a Lázár-család 1951-ig élt – töltötte gyermekéveit. Iskolába a környező falvakba járt. 1950 októberétől a szekszárdi Garay János Gimnáziumban tanult tovább s 1954-ben ott érettségizett. Felsőfokú tanulmányait az érettségi évében kezdte meg a budapesti Eötvös Loránd Tudományegyetem Bölcsészkarán, újságíró szakon. Az Eötvös-kollégiumban lakott. 1956-ban a harmadévesek kötelező szakmai gyakorlatát Nyíregyházán töltötte, majd 1957-ben Pécsre került.</p>
+
+            <p class="szurke">Mivel 1959. február 1-jétől az Esti Pécsi Napló újságíróként alkalmazta, az egyetemen ugyanez év decemberében különbözeti vizsgát tett, és tanulmányait magyar szakon, levelező tagozaton folytatta. 1961-ben szerzett magyartanári diplomát.</p>
+            
+            <a href="eletrajz.html">Tovább</a>
+            <h2>Fontosabb díjak, elismerések:</h2>
+            <p>1974 – József Attila-díj</p>
+            <p>1980 – a Művészeti Alap Irodalmi Díja</p>
+            <p>1981 – Állami Ifjúsági Díj</p>
+            <p>1982 – Andersen-diploma</p>
+            <p class="szurke">1985, 1989, 1996 – Az Év Könyve-jutalom</p>
+            <a href="eletrajz.html">Tovább</a>
+        </div>
         <div id="oszlop3">
             <img src="szegenydzsoni.jpg" alt="szegenydzsoni" class="kep">
+            <p class="kepalairas">Szegény Dzsoni és Árnika (1981)</p>
         </div>
     </div>
     <div id="lablec"></div>
